--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% if site.photo %}
+          <img src="{{site.photo | relative_url}}" alt="Photo of Yuejia Zhang" />
+          <p> {{ site.photo_description }} </p>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
