Add separate research page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        <p>{{ site.contact_information }}</p>
+        <p class="view"><a href="{{ site.contact_information }}">Contact Me by Email</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
@@ -44,7 +44,8 @@
       </header>
       <section>
 
-      {{ content }}
+      <!-- {{ content }} -->
+      <h2><a href="./research.html"> Research Activities </a></h2>
 
       </section>
       <footer>
