--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,11 +41,12 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <h2><a href="./research.html"> Research Activities </a></h2>
       </header>
       <section>
 
-      <!-- {{ content }} -->
-      <h2><a href="./research.html"> Research Activities </a></h2>
+      {{ content }}
 
       </section>
       <footer>
