--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
 
         <p class="view"><a href="{{ site.contact_information }}">Contact Me by Email</a></p>
 
+        <p class="view"><a href="{{ site.research }}">Research</a></p>
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
